# bws-quote-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bws-quote.bundle  bws.bat  docker-compose.yml  push-to-github-en.ps1  push-to-github.bat  pyproject.toml  一键启动.bat  上传Release到github.bat  上传Release到github.ps1  上传到GITHUB操作指引.md  全盘搜索并启动.bat  推送到github.bat  推送到github.ps1  诊断并启动.bat  重置admin账号.bat
.claude/: settings.json
backend/: alembic.ini  requirements.txt
backend/app/: __init__.py  bali_areas.py  config.py  database.py  main.py  schemas.py  seed.py
docs/: 00_系统总体设计.md  01_架构设计.md  02_数据库设计.md  03_AI模块设计.md  04_赌自费算法.md  05_API规范.md  06_开发日志.md  07_行程合理性校验.md  08_账号权限系统设计.md  09_ERP同步钩子设计.md  APP版本设计方案_2026-06-11.md  下次深度优化方向_2026-05-08.md  下次深度优化方向_2026-05-10.md  下次深度优化方向_2026-05-14_CLI.md  下次深度优化方向_2026-05-14_v2.md  下次深度优化方向_2026-05-16_alembic单源.md  下次深度优化方向_2026-05-16_v2.md  下次深度优化方向_2026-05-21_权限+SKILL.md  今日工作记录_2026-05-05.md  今日工作记录_2026-05-07.md  今日工作记录_2026-05-08.md  今日工作记录_2026-05-14_CLI工具.md  今日工作记录_2026-05-14_SKILL体系建设.md  今日工作记录_2026-05-16_CLI测试退码Alembic.md  今日工作记录_2026-05-16_v0.9业务对齐.md  今日工作记录_2026-05-21_CLI入口修复+权限白名单.md  今日工作记录_2026-06-12_APP全链路收官与v0.10.0发版.md  思维导图.html  给老板的话_2026-05-19_v0.9.1赌自费策略对齐.md  给老板的话_2026-05-19_v0.9.2后端权限gate.md  给老板的话_2026-05-19_v0.9.3行程灵活+UI美化.md  给老板的话_2026-05-21_少烦你点击.md  给老板的话_2026-05-24_v0.9.4_季节多档定价.md
frontend/: index.html
mobile/: package.json
scripts/: import_bali_data.py  init_db.py  inspect_rest.py  inspect_sample.py  inspect_xlsx.py  scan_perm_prompts.py  start.bat  start.sh
(+82 files in other folders)
